Finish working on CLI Implementation
